fixes styles in carousel, and hero banner on ios

--- a/components/imaginationTv/imaginationTvCarousel.module.scss
+++ b/components/imaginationTv/imaginationTvCarousel.module.scss
@@ -4,35 +4,60 @@
   justify-content: space-evenly;
   align-items: center;
   position: relative;
-  // margin: 3em auto;
 
-  .slick-prev {
-    background: url($cdnRoot + 'assets/images/carousel/arrow-prev-purple.svg') no-repeat top center / contain transparent;
-    left: 5rem;
-    margin: 0;
-    @media all and(min-width: $md) {
-      left: 8rem;
-    }
-    @media all and(min-width: $lg) {
-      left: 10rem;
-    }
+  @media screen and (min-width: 100em) {
+    max-width: 100em;
+    margin: auto;
   }
 
-  .slick-next {
-    background: url($cdnRoot + 'assets/images/carousel/arrow-next-purple.svg') no-repeat top center / contain transparent;
-    right: 5rem;
+  @media screen and (max-width: 100em) {
+    left: -10%;
+    width: 120%;
+  }
+
+  @media screen and (max-width: $sm) {
+    flex-direction: column;
     margin: 0;
-    @media all and(min-width: $md) {
-      right: 8rem;
+  }
+
+  :global() {
+    .slick-prev {
+      background: url($cdnRoot + 'assets/images/carousel/arrow-prev-purple.svg') no-repeat top center / contain transparent;
+      left: 5rem;
+      margin: 0;
+      @media all and(min-width: $md) {
+        left: 8rem;
+      }
+      @media all and(min-width: $lg) {
+        left: 10rem;
+      }
     }
-    @media all and(min-width: $lg) {
-      right: 10rem;
+  
+    .slick-next {
+      background: url($cdnRoot + 'assets/images/carousel/arrow-next-purple.svg') no-repeat top center / contain transparent;
+      right: 5rem;
+      margin: 0;
+      @media all and(min-width: $md) {
+        right: 8rem;
+      }
+      @media all and(min-width: $lg) {
+        right: 10rem;
+      }
+    }
+
+    .slick-center .episodePanel {
+      opacity: 100%;
+    }
+
+    .slick-list {
+      padding: 0 !important;
     }
   }
 }
 
 .episodePanel {
-  padding: 4em 1.5em 1.5em
+  padding: 4em 1.5em 1.5em;
+  opacity: 50%;
 }
 
 .slick-slide .episodePanel .episodeContentInfo {
